# dalil-app

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  moon.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  dep-scan.yml
.moon/: workspace.yml
.opencode/plans/: 2026-07-15-hybrid-search-keyword-first.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  alembic.ini  entrypoint.sh  moon.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_embedding_unique_constraint.py  0003_increase_model_version_length.py  0004_change_vector_dim_to_384.py  0005_indonesian_translations.py  0006_revert_to_1024_dim.py  0007_revert_to_384_dim.py  be79b21cfad0_increase_revelation_type_length.py
backend/app/: celery_app.py  main.py
backend/app/api/: hadith.py  meta.py  quran.py  search.py
backend/app/core/: cache.py  config.py  database.py  limiter.py
backend/app/models/: models.py  schemas.py
backend/app/services/: embedding.py  search.py
backend/app/tasks/: embeddings.py
backend/tests/: test_detail_tafsir_syarah.py  test_embedding_tasks.py  test_eval_metrics.py  test_hadith_browse.py  test_ingest_hadith_books.py  test_search_api.py  test_search_service.py  test_stats.py
data/eval/: evaluate.py  ground_truth.json
data/scripts/: embed_bulk.py  ingest.py
deploy/: .env.prod.example  README.md  backup.sh  docker-compose.prod.yml  init-letsencrypt.sh
deploy/nginx/: nginx.conf
docs/: BOILERPLATE_PLAN.md  CODEBASE_ANALYSIS.md  DIAGRAMS.md  PIPELINE.md  PRD.md  TECH.md
frontend/: Dockerfile.dev  biome.json  index.html  moon.yml  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+51 files in other folders)
