[project]
name = "dalil-backend"
version = "0.1.0"
description = "Semantic search API for Islamic texts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "alembic>=1.13.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "sentence-transformers>=3.4.0",
    "torch>=2.9.0",
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pyflakes + pycodestyle
    "I",                   # isort
    "UP",                  # pyupgrade
    "B",                   # flake8-bugbear
    "C4",                  # flake8-comprehensions
    "SIM",                 # flake8-simplify
    "N",                   # pep8-naming
]
ignore = [
    "N818",               # exception suffix
    "B008",               # function-call-in-defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["alembic/", "data/", "venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
